[package]
name = "booksprocessing"
version = "0.1.0"
authors = ["soulllink <soullinkslsl@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[[bin]]
name = "booksprocessing"
path = "main.rs"
